Fix notify z-index bug. close #8

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -399,7 +399,7 @@ body {
     text-transform: none;
     color: #fff;
 
-    z-index: -1;
+    pointer-events: none;
 }
 
 .notify {
@@ -417,6 +417,8 @@ body {
     max-width: 400px;
 
     opacity: .9;
+
+    pointer-events: auto;
 }
 
 .notify div {
